[gd_scene load_steps=11 format=3 uid="uid://dtybqqlnyraij"]

[ext_resource type="Script" path="res://ships/player_ship.gd" id="1_r5s6i"]
[ext_resource type="ArrayMesh" uid="uid://b5ukyqbhdkitg" path="res://ship_meshes/InfrareddFurtive.res" id="2_yiwjg"]
[ext_resource type="PackedScene" uid="uid://dvb80kv17x16k" path="res://velocity_component.tscn" id="3_4ymqx"]
[ext_resource type="PackedScene" uid="uid://bpbnpe1p4jf3j" path="res://ships/gun.tscn" id="4_0l4rk"]
[ext_resource type="PackedScene" uid="uid://dgd2mblnm78nu" path="res://ships/laser_bullet.tscn" id="4_6clxe"]
[ext_resource type="PackedScene" uid="uid://brf6pbwe3p0n" path="res://player_control_component.tscn" id="4_g7u2j"]
[ext_resource type="PackedScene" uid="uid://dc7pu5v45t7ue" path="res://tilt_y_component.tscn" id="6_k3wgp"]
[ext_resource type="Script" path="res://tilt_y_component.gd" id="7_ch88u"]
[ext_resource type="PackedScene" uid="uid://8ofi6mj0nigs" path="res://ships/barrel_roll_component.tscn" id="8_m7n1j"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tglfw"]
points = PackedVector3Array(-0.688658, -1.95049, -0.155479, 0.196671, 2.08413, 0.139625, 0.294699, 1.3951, 0.23796, -3.14921, -1.26187, 0.434824, 3.14921, -1.26187, 0.434824, 0.163676, 1, -0.466575, -3.14921, -0.769475, 0.139625, 3.14921, -0.769475, 0.139625, 0.5, -1.23332, -0.39064, -0.196671, 2.08413, -0.25391, -2.55858, -0.375805, 0.434824, -0.5, -1.23332, -0.39064, 0.393343, -2.04921, 0.0411928, 2.55858, -0.375805, 0.434824, 3.14921, -1.36018, 0.139625, 0.196671, 2.08413, -0.25391, -3.14921, -1.36018, 0.139625, -0.163676, 1, -0.466575, 0.393343, -2.04921, -0.155479, -0.196671, 2.08413, 0.139625, 3.14921, -0.671159, 0.23796, -3.14921, -0.671159, 0.23796, -0.196671, 1.88709, -0.352246, -0.393343, -2.04921, 0.0411928, 0.196671, 1.88709, -0.352246, -3.14921, -1.36018, 0.336392, 3.14921, -1.36018, 0.336392, 0.688658, -1.95049, -0.155479, -0.393343, -2.04921, -0.155479, 2.9, -0.616666, 0.395893, -2.9, -0.616666, 0.395893, -0.294699, 1.3951, 0.23796)

[node name="PlayerShip" type="CharacterBody3D"]
motion_mode = 1
script = ExtResource("1_r5s6i")

[node name="InfrareddFurtive" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = ExtResource("2_yiwjg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_tglfw")

[node name="Gun" parent="." instance=ExtResource("4_0l4rk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.00245, 0)
bullet_scene = ExtResource("4_6clxe")

[node name="velocity_component" parent="." instance=ExtResource("3_4ymqx")]
speed = 20.0

[node name="player_control_component" parent="." instance=ExtResource("4_g7u2j")]

[node name="tilt_y_component" parent="." instance=ExtResource("6_k3wgp")]
script = ExtResource("7_ch88u")

[node name="barrel_roll_component" parent="." instance=ExtResource("8_m7n1j")]

[connection signal="velocity_changed" from="velocity_component" to="." method="_on_velocity_changed"]
[connection signal="player_move" from="player_control_component" to="." method="_on_player_move"]
[connection signal="player_rolls" from="player_control_component" to="." method="_on_player_control_component_player_rolls"]
[connection signal="player_shoots" from="player_control_component" to="." method="_on_player_shoots"]
[connection signal="tilt_changed" from="tilt_y_component" to="." method="_on_tilt_y_component_tilt_changed"]
